--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rvm"]
 	path = rvm
 	url = git@github.com:fnichol/chef-rvm.git
+[submodule "sudo"]
+	path = sudo
+	url = git@github.com:opscode-cookbooks/sudo.git
